--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-image-list-starter",
+  "name": "demo-video-list-starter",
   "author": {
     "name": "Colby Fayock",
     "email": "hello@colbyfayock.com",
